Fixed footer at bottom of page and Heading: aligned to center

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 body {
     background-color: #111a2b;
     color: white;
-    margin: 0px;
+    margin: 0;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 
@@ -15,6 +16,8 @@ body {
     align-items: center;
     font-family: "Roboto Mono", monospace;
     /* font-family: "Press Start 2P", system-ui; */
+    text-align: center;
+
 }
 
 .heading {
@@ -96,7 +99,7 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* margin-top: auto; */
+    margin-top: auto;
     font-family: 'Courier New', Courier, monospace;
 }
 
